[tool.poetry]
name = "dtwmetrics"
version = "0.1.4"
description = "Dynamic time warping metrics."
authors = ["danielvogler"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "dtwmetrics" },
]

[tool.poetry.dependencies]
python = "^3.11.2"
pytest = "^7.4.3"
yamllint = "^1.32.0"
pylint = "^3.0.2"
scipy = "^1.11.4"
matplotlib = "^3.8.2"

[tool.black]
target-version = ["py39"]
line-length = 79

[tool.flake8]
max-line-length = 79
exclude = [".git", "__pycache__", "dist"]

[tool.isort]
atomic = true
profile = "black"
line_length = 79
skip_gitignore = true

[tool.pylint]
max-line-length = 79

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
create = true
in-project = true
